Update meta files

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ Thumbs.db
 Reflection/Library/
 Reflection/Library/assetDatabase3
 Reflection/Library/guidmapper
+
+Reflection/Library/InspectorExpandedItems.asset
