--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Reflection/Temp/
 Reflection/Obj/
 Reflection/UnityGenerated/
 Reflection/Library/
+Library/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
