--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # =============== #
 # Unity generated #
 # =============== #
-Reflection/Temp/
-Reflection/Obj/
-Reflection/UnityGenerated/
-Reflection/Library/
-Library/
+/Reflection/Temp/
+/Reflection/Obj/
+/Reflection/UnityGenerated/
+/Reflection/Library/
+/Library/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
